Correctly align label of inline fields (`CheckboxField`, `Toggle`) in horizontal `FormLayout`

--- a/src/styles/tools/form-fields/_inline-field-layout.scss
+++ b/src/styles/tools/form-fields/_inline-field-layout.scss
@@ -85,6 +85,7 @@
 
         &.isRootLayoutHorizontal .label {
             grid-column-start: 1;
+            align-self: start;
             width: auto;
             padding-right: settings.$horizontal-inner-gap;
             margin-left: 0;
